changed all links to open in new tab; edited all class attributes in HTML for consistency

--- a/app/index.html
+++ b/app/index.html
@@ -66,13 +66,13 @@
                 displayed on separate "pages" and input values are automatically made available for form validation and
                 submission through custom hooks.
               </p>
-              <div class="l-flex-row--type-margin-left-small">
-                <a href="https://github.com/z2lai/react-emotion-multi-step-form" class="link">
+              <div class="l-flex-row l-flex-row--type-margin-left-small">
+                <a href="https://github.com/z2lai/react-emotion-multi-step-form" target="_blank" class="link">
                   <svg class="link__icon">
                     <use xlink:href="assets/icons/symbol-defs.svg#icon-github"></use>
                   </svg>Github
                 </a>
-                <a href="https://z2lai.github.io/react-emotion-multi-step-form/" class="link">
+                <a href="https://z2lai.github.io/react-emotion-multi-step-form/" target="_blank" class="link">
                   <svg class="link__icon">
                     <use xlink:href="assets/icons/symbol-defs.svg#icon-sphere"></use>
                   </svg>Website
@@ -124,7 +124,7 @@
               </div>
 
               <div
-                class="l-flex-row__item l-flex-row__item--size-6-after-medium l-flex-row__item--size-4-after-large feature js-feature js-feature--html5">
+                class="feature l-flex-row__item l-flex-row__item--size-6-after-medium l-flex-row__item--size-4-after-large js-feature js-feature--html5">
                 <div class="feature__text">
                   <svg class="feature__icon">
                     <use xlink:href="assets/icons/symbol-defs.svg#icon-file-alert"></use>
@@ -138,7 +138,7 @@
               </div>
 
               <div
-                class="l-flex-row__item l-flex-row__item--size-6-after-medium l-flex-row__item--size-4-after-large feature js-feature js-feature--css3">
+                class="feature l-flex-row__item l-flex-row__item--size-6-after-medium l-flex-row__item--size-4-after-large js-feature js-feature--css3">
                 <div class="feature__text">
                   <svg class="feature__icon">
                     <use xlink:href="assets/icons/symbol-defs.svg#icon-animation"></use>
@@ -153,7 +153,7 @@
               </div>
 
               <div
-                class="l-flex-row__item l-flex-row__item--size-6-after-medium l-flex-row__item--size-4-after-large feature js-feature js-feature--react">
+                class="feature l-flex-row__item l-flex-row__item--size-6-after-medium l-flex-row__item--size-4-after-large js-feature js-feature--react">
                 <div class="feature__text">
                   <svg class="feature__icon">
                     <use xlink:href="assets/icons/symbol-defs.svg#icon-site-map"></use>
@@ -167,7 +167,7 @@
               </div>
 
               <div
-                class="l-flex-row__item l-flex-row__item--size-6-after-medium l-flex-row__item--size-4-after-large feature js-feature js-feature--html5">
+                class="feature l-flex-row__item l-flex-row__item--size-6-after-medium l-flex-row__item--size-4-after-large js-feature js-feature--html5">
                 <div class="feature__text">
                   <svg class="feature__icon">
                     <use xlink:href="assets/icons/symbol-defs.svg#icon-keyboard"></use>
@@ -182,7 +182,7 @@
               </div>
 
               <div
-                class="l-flex-row__item l-flex-row__item--size-6-after-medium l-flex-row__item--size-4-after-large feature js-feature js-feature--css3">
+                class="feature l-flex-row__item l-flex-row__item--size-6-after-medium l-flex-row__item--size-4-after-large js-feature js-feature--css3">
                 <div class="feature__text">
                   <svg class="feature__icon">
                     <use xlink:href="assets/icons/symbol-defs.svg#icon-devices"></use>
@@ -197,7 +197,7 @@
           </section>
 
           <section class="frame frame--content-text">
-            <div class="l-flex-column l-flex-column__gutters-extra-small">
+            <div class="l-flex-column l-flex-column--gutters-extra-small">
               <h4 class="subheading">
                 Lesson Learnt
               </h4>
@@ -222,7 +222,7 @@
                 <p>
                   A single-page website for potential employers to glance over my best projects and my background.
                 </p>
-                <a href="https://github.com/z2lai/portfolio-website" class="link">
+                <a href="https://github.com/z2lai/portfolio-website" target="_blank" class="link">
                   <svg class="link__icon">
                     <use xlink:href="assets/icons/symbol-defs.svg#icon-github"></use>
                   </svg>Github
@@ -262,7 +262,7 @@
                 </ul>
 
                 <div id="p2-tech-features" class="l-flex-row">
-                  <div class="l-flex-row__item feature js-feature js-feature--gulp js-feature--browsersync">
+                  <div class="feature l-flex-row__item js-feature js-feature--gulp js-feature--browsersync">
                     <div class="feature__text">
                       <svg class="feature__icon">
                         <use xlink:href="assets/icons/symbol-defs.svg#icon-file-symlink"></use>
@@ -276,7 +276,7 @@
                     </div>
                   </div>
                   <div
-                    class="l-flex-row__item l-flex-row__item--margin-top-none-after-medium feature js-feature js-feature--postcss">
+                    class="feature l-flex-row__item l-flex-row__item--margin-top-none-after-medium js-feature js-feature--postcss">
                     <div class="feature__text">
                       <svg class="feature__icon">
                         <use xlink:href="assets/icons/symbol-defs.svg#icon-template"></use>
@@ -289,7 +289,7 @@
                     </div>
                   </div>
                   <div
-                    class="l-flex-row__item l-flex-row__item--margin-top-none-after-medium feature js-feature js-feature--webpack js-feature--es6">
+                    class="feature l-flex-row__item l-flex-row__item--margin-top-none-after-medium js-feature js-feature--webpack js-feature--es6">
                     <div class="feature__text">
                       <svg class="feature__icon">
                         <use xlink:href="assets/icons/symbol-defs.svg#icon-file-code"></use>
@@ -301,10 +301,10 @@
                       </p>
                     </div>
                   </div>
-                  <div class="l-flex-row__item l-flex-row__item--margin-top-none-after-medium feature js-feature">
+                  <div class="feature l-flex-row__item l-flex-row__item--margin-top-none-after-medium js-feature">
                     <div class="feature__text">
                       <svg class="feature__icon">
-                        <use xlink:href="assets/icons/symbol-defs.svg#icon-accessible"></use>
+                        <use xlink:href="assets/icons/symbol-defs.svg#icon-device-mobile"></use>
                       </svg>
                       <h5 class="feature__title">Mobile-first Design</h5>
                       <p>
@@ -411,35 +411,36 @@
             <section id="links" class="l-flex-column l-flex-column--gutters-small">
               <ul class="l-flex-row l-flex-row--nowrap l-flex-row--type-margin-sides-small l-flex-column__item">
                 <li>
-                  <a href="https://www.linkedin.com/in/zheng-lai-9a30808b/" class="button button--round">
+                  <a href="https://www.linkedin.com/in/zheng-lai-9a30808b/" target="_blank"
+                    class="button button--round">
                     <svg class="button__icon">
                       <use xlink:href="assets/icons/symbol-defs.svg#icon-linkedin"></use>
                     </svg>
                   </a>
                 </li>
                 <li>
-                  <a href="https://github.com/z2lai/" class="button button--round">
+                  <a href="https://github.com/z2lai/" target="_blank" class="button button--round">
                     <svg class="button__icon">
                       <use xlink:href="assets/icons/symbol-defs.svg#icon-github"></use>
                     </svg>
                   </a>
                 </li>
                 <li>
-                  <a href="https://codepen.io/your-work/" class="button button--round">
+                  <a href="https://codepen.io/your-work/" target="_blank" class="button button--round">
                     <svg class="button__icon">
                       <use xlink:href="assets/icons/symbol-defs.svg#icon-codepen"></use>
                     </svg>
                   </a>
                 </li>
                 <li>
-                  <a href="https://github.com/z2lai/" class="button button--round">
+                  <a href="https://github.com/z2lai/" target="_blank" class="button button--round">
                     <svg class="button__icon">
                       <use xlink:href="assets/icons/symbol-defs.svg#icon-envelope"></use>
                     </svg>
                   </a>
                 </li>
               </ul>
-              <a href="#my-work" class="button button--large l-flex-column__item">Resume</a>
+              <a href="#" target="_blank" class="button button--large l-flex-column__item">Resume</a>
             </section>
 
             <div class="l-flex-column l-flex-column--wide-after-medium l-flex-column__item--margin-top-after-small">
