refactored tech-icon block and added label element; removed browsersync tech-icon to keep spacing consistent

--- a/app/index.html
+++ b/app/index.html
@@ -91,21 +91,24 @@
             <h4 class="subheading">
               Highlights
             </h4>
-            <ul id="p1-tech-icons" class="l-flex-row l-flex-row--type-margin-sides-large">
-              <li>
-                <svg class="tech-icon" data-tech="react">
+            <ul id="p1-tech-icons" class="l-flex-row l-flex-row--center l-flex-row--type-margin-sides-large">
+              <li class="tech-icon tech-icon--large-after-small" data-tech="react">
+                <svg class="tech-icon__icon">
                   <use xlink:href="assets/icons/symbol-defs.svg#icon-react"></use>
                 </svg>
+                <div class="tech-icon__label">React</div>
               </li>
-              <li>
-                <svg class="tech-icon" data-tech="html5">
+              <li class="tech-icon tech-icon--large-after-small" data-tech="html5">
+                <svg class="tech-icon__icon">
                   <use xlink:href="assets/icons/symbol-defs.svg#icon-html5-original"></use>
                 </svg>
+                <div class="tech-icon__label">HTML5</div>
               </li>
-              <li>
-                <svg class="tech-icon" data-tech="css3">
+              <li class="tech-icon tech-icon--large-after-small" data-tech="css3">
+                <svg class="tech-icon__icon">
                   <use xlink:href="assets/icons/symbol-defs.svg#icon-css3-original"></use>
                 </svg>
+                <div class="tech-icon__label">CSS3</div>
               </li>
             </ul>
             <div id="p1-tech-features" class="l-flex-row l-flex-column__item l-flex-column__item--margin-top-none">
@@ -233,31 +236,30 @@
                   Highlights
                 </h4>
                 <ul id="p2-tech-icons"
-                  class="l-flex-row l-flex-row--type-margin-sides-small l-flex-row--type-margin-top-small">
-                  <li>
-                    <svg class="tech-icon tech-icon--small" data-tech="gulp">
+                  class="l-flex-row l-flex-row--center l-flex-row--type-margin-sides-small l-flex-row--type-margin-top-small">
+                  <li class="tech-icon" data-tech="gulp">
+                    <svg class="tech-icon__icon">
                       <use xlink:href="assets/icons/symbol-defs.svg#icon-gulp"></use>
                     </svg>
+                    <div class="tech-icon__label">Gulp</div>
                   </li>
-                  <li>
-                    <svg class="tech-icon tech-icon--small" data-tech="browsersync">
-                      <use xlink:href="assets/icons/symbol-defs.svg#icon-browsersync"></use>
-                    </svg>
-                  </li>
-                  <li>
-                    <svg class="tech-icon tech-icon--small" data-tech="postcss">
+                  <li class="tech-icon" data-tech="postcss">
+                    <svg class="tech-icon__icon">
                       <use xlink:href="assets/icons/symbol-defs.svg#icon-postcss"></use>
                     </svg>
+                    <div class="tech-icon__label">PostCSS</div>
                   </li>
-                  <li>
-                    <svg class="tech-icon tech-icon--small" data-tech="webpack">
+                  <li class="tech-icon" data-tech="webpack">
+                    <svg class="tech-icon__icon">
                       <use xlink:href="assets/icons/symbol-defs.svg#icon-webpack"></use>
                     </svg>
+                    <div class="tech-icon__label">Webpack</div>
                   </li>
-                  <li>
-                    <svg class="tech-icon tech-icon--small" data-tech="es6">
+                  <li class="tech-icon" data-tech="es6">
+                    <svg class="tech-icon__icon">
                       <use xlink:href="assets/icons/symbol-defs.svg#icon-es6"></use>
                     </svg>
+                    <div class="tech-icon__label">ES6</div>
                   </li>
                 </ul>
 
