--- a/index.html
+++ b/index.html
@@ -336,7 +336,8 @@
                 </div>
                 <div class="iphone-x__inner-shadow"></div>
                 <div class="iphone-x__screen">
-                  <img src="assets/images/portfolio-website-mobile.JPG" alt="Our founder, Jane Doe">
+                  <!-- <img src="assets/images/portfolio-website-mobile.JPG" alt="Our founder, Jane Doe"> -->
+                  <iframe src="index.html" width="100%" height="100%"></iframe>
                 </div>
               </div>
             </div>
@@ -428,9 +429,9 @@
                   </a>
                 </li>
                 <li>
-                  <a href="https://codepen.io/your-work/" target="_blank" class="button button--round">
+                  <a href="https://codesandbox.io/dashboard/drafts?workspace=f5ebd9da-bf58-4ce6-ade5-e51325bc9057" target="_blank" class="button button--round">
                     <svg class="button__icon">
-                      <use xlink:href="assets/icons/symbol-defs.svg#icon-codepen"></use>
+                      <use xlink:href="assets/icons/symbol-defs.svg#icon-codesandbox"></use>
                     </svg>
                   </a>
                 </li>
