added mobile website screenshot and status bar into mobile frame; removed box-shadow for frame--content-text on mobile

--- a/app/index.html
+++ b/app/index.html
@@ -336,8 +336,10 @@
                 </div>
                 <div class="iphone-x__inner-shadow"></div>
                 <div class="iphone-x__screen">
-                  <!-- <img src="assets/images/portfolio-website-mobile.JPG" alt="Our founder, Jane Doe"> -->
-                  <iframe src="index.html" width="100%" height="100%"></iframe>
+                  <img src="assets/images/iphone-x-status-bar.jpg" alt="iPhone X Status Bar" class="iphone-x__status-bar">
+                  <div class="iphone-x__content">
+                    <img src="assets/images/portfolio-website-mobile-screenshot.png" alt="Website Mobile View">
+                  </div>
                 </div>
               </div>
             </div>
@@ -429,7 +431,8 @@
                   </a>
                 </li>
                 <li>
-                  <a href="https://codesandbox.io/dashboard/drafts?workspace=f5ebd9da-bf58-4ce6-ade5-e51325bc9057" target="_blank" class="button button--round">
+                  <a href="https://codesandbox.io/dashboard/drafts?workspace=f5ebd9da-bf58-4ce6-ade5-e51325bc9057"
+                    target="_blank" class="button button--round">
                     <svg class="button__icon">
                       <use xlink:href="assets/icons/symbol-defs.svg#icon-codesandbox"></use>
                     </svg>
