--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
                 <div class="iphone-x__inner-shadow"></div>
                 <div class="iphone-x__screen">
                   <img src="assets/images/iphone-x-status-bar.jpg" alt="iPhone X Status Bar" class="iphone-x__status-bar">
-                  <div class="iphone-x__content">
+                  <div id="iphone-x-content" class="iphone-x__content">
                     <img src="assets/images/portfolio-website-mobile-screenshot.png" alt="Website Mobile View">
                   </div>
                 </div>
