added chevrons with animation to mobile frame to cue user to scroll down

--- a/app/index.html
+++ b/app/index.html
@@ -336,8 +336,12 @@
                 </div>
                 <div class="iphone-x__inner-shadow"></div>
                 <div class="iphone-x__screen">
-                  <img src="assets/images/iphone-x-status-bar.jpg" alt="iPhone X Status Bar" class="iphone-x__status-bar">
+                  <img src="assets/images/iphone-x-status-bar.jpg" alt="iPhone X Status Bar"
+                    class="iphone-x__status-bar">
                   <div id="iphone-x-content" class="iphone-x__content">
+                    <div class="iphone-x__scroll-chevron iphone-x__scroll-chevron--first js-scroll-chevron"></div>
+                    <div class="iphone-x__scroll-chevron iphone-x__scroll-chevron--second js-scroll-chevron"></div>
+                    <div class="iphone-x__scroll-chevron iphone-x__scroll-chevron--third js-scroll-chevron"></div>
                     <img src="assets/images/portfolio-website-mobile-screenshot.png" alt="Website Mobile View">
                   </div>
                 </div>
