--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
             <div
               class="l-split-column__column l-split-column__column--large l-split-column__column--flex-none-after-small">
-              <img src="assets/images/react-multi-step-form.jpg" alt="React Multi-step Form Library Example App"
+              <img src="assets/images/react-multi-step-form.jpg" loading="lazy" alt="React Multi-step Form Library Example App"
                 class="frame frame--content-image">
             </div>
           </header>
@@ -336,13 +336,13 @@
                 </div>
                 <div class="iphone-x__inner-shadow"></div>
                 <div class="iphone-x__screen">
-                  <img src="assets/images/iphone-x-status-bar.jpg" alt="iPhone X Status Bar"
+                  <img src="assets/images/iphone-x-status-bar.jpg" loading="lazy" alt="iPhone X Status Bar"
                     class="iphone-x__status-bar">
                   <div id="iphone-x-content" class="iphone-x__content">
                     <div class="iphone-x__scroll-chevron iphone-x__scroll-chevron--first js-scroll-chevron"></div>
                     <div class="iphone-x__scroll-chevron iphone-x__scroll-chevron--second js-scroll-chevron"></div>
                     <div class="iphone-x__scroll-chevron iphone-x__scroll-chevron--third js-scroll-chevron"></div>
-                    <img src="assets/images/portfolio-website-mobile-screenshot.png" alt="Website Mobile View">
+                    <img src="assets/images/portfolio-website-mobile-screenshot.png" loading="lazy" alt="Website Mobile View">
                   </div>
                 </div>
               </div>
@@ -371,7 +371,7 @@
               <article
                 class="skill l-flex-row__item l-flex-row__item--margin-top-none l-flex-row__item--size-4-after-medium">
                 <div class="skill__image-frame">
-                  <img src="assets/images/customer-relationship-badge.png">
+                  <img src="assets/images/customer-relationship-badge.png" loading="lazy">
                 </div>
                 <h3 class="skill__title">Customer Service</h3>
                 <h3 class="skill__subtitle">3 Years</h3>
@@ -384,7 +384,7 @@
               <article
                 class="skill l-flex-row__item l-flex-row__item--margin-top-none l-flex-row__item--size-4-after-medium">
                 <div class="skill__image-frame">
-                  <img src="assets/images/data-analytics.png">
+                  <img src="assets/images/data-analytics-badge.png" loading="lazy">
                 </div>
                 <h3 class="skill__title">Data Analytics</h3>
                 <h3 class="skill__subtitle">5 Years</h3>
@@ -395,7 +395,7 @@
               <article
                 class="skill skill--last l-flex-row__item l-flex-row__item--margin-top-none l-flex-row__item--size-4-after-medium">
                 <div class="skill__image-frame">
-                  <img src="assets/images/idea-brain.png" height="100%">
+                  <img src="assets/images/idea-brain-badge.png" loading="lazy" height="100%">
                 </div>
                 <h3 class="skill__title">Continuous Learning</h3>
                 <h3 class="skill__subtitle">Lifetime</h3>
