--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                       </svg>
                       <h5 class="feature__title">Mobile-first Design</h5>
                       <p>
-                        Prioritized content layout with responsive and optimized images.
+                        Prioritized content with responsive images and optimized assets.
                       </p>
                     </div>
                   </div>
