fixed href attribute in email button link

--- a/app/index.html
+++ b/app/index.html
@@ -449,7 +449,7 @@
                   </a>
                 </li>
                 <li>
-                  <a href="https://github.com/z2lai/" target="_blank" rel="noopener" title="Send me an email"
+                  <a href="mailto:zhenglai3@gmail.com" target="_blank" rel="noopener" title="Send me an email"
                     aria-label="Send me an email" class="button button--round">
                     <svg class="button__icon">
                       <use xlink:href="assets/icons/symbol-defs.svg#icon-envelope"></use>
