--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <section id="banner" class="hero is-preload">
     <header id="repulse-div" class="hero__text-content">
       <h1 class="hero__title">Zheng Lai</h1>
-      <p class="hero__description">A business analyst with a passion for writing modular code.</p>
+      <p class="hero__description">A business analyst with a passion for writing modular code</p>
       <div class="hero__button-wrapper">
         <a href="#projects" aria-label="Projects" class="button button--large">Learn More</a>
       </div>
@@ -120,7 +120,8 @@
                   </svg>
                   <h5 class="feature__title">Declarative Configuration</h5>
                   <p>
-                    Implemented input components using custom hooks and compound components pattern to allow the user
+                    Created reusable input components using custom hooks and compound components pattern to allow the
+                    user
                     to configure the inputs declaratively.
                   </p>
                 </div>
@@ -163,8 +164,8 @@
                   </svg>
                   <h5 class="feature__title">Form State Management</h5>
                   <p>
-                    Optimized form state management through techniques such as state colocation and logically separated
-                    contexts which minimizes the number of unnecessary renders.
+                    Optimized form state management using techniques such as state colocation and logically separated
+                    contexts which minimize the number of unnecessary renders.
                   </p>
                 </div>
               </div>
@@ -205,9 +206,8 @@
                 Lesson Learnt
               </h4>
               <p>
-                The more a component inverts control, the more flexible it becomes. However, in order to build a truly
-                robust and
-                reusable library, the focus has to be on solving a single problem and solving it well.
+                The more a component inverts control, the more flexible it becomes. Moreover, in order to build a truly
+                robust and reusable library, one has to focus on solving a single problem and solving it well.
               </p>
             </div>
           </section>
@@ -272,9 +272,8 @@
                       </svg>
                       <h5 class="feature__title">Automated Workflow</h5>
                       <p>
-                        Automated workflow using tools such as Gulp and Browsersync to trigger tasks on file change
-                        including
-                        CSS injection or browser refresh while enabling cross browser and mobile testing.
+                        Automated workflow using tools such as Gulp, which triggers tasks on file change
+                        while enabling cross browser and mobile testing.
                       </p>
                     </div>
                   </div>
@@ -286,7 +285,7 @@
                       </svg>
                       <h5 class="feature__title">Scalable Modular CSS Architecture</h5>
                       <p>
-                        Implemented a modular and scalable CSS architecture using PostCSS, BEM Methodology, and semantic
+                        Created a modular and scalable CSS architecture using PostCSS, BEM Methodology, and semantic
                         classes.
                       </p>
                     </div>
@@ -299,8 +298,8 @@
                       </svg>
                       <h5 class="feature__title">Modern Modular Javascript</h5>
                       <p>
-                        Utilized modern, modular Javascript features, with Webpack and Babel loader for bundling and
-                        transpiling.
+                        Utilized modern, modular Javascript (ES6) features, with Webpack and Babel loader for bundling
+                        and transpiling.
                       </p>
                     </div>
                   </div>
@@ -311,7 +310,7 @@
                       </svg>
                       <h5 class="feature__title">Mobile-first Design</h5>
                       <p>
-                        Prioritized content with responsive images and optimized assets.
+                        Optimized assets, prioritized content and made images responsive for a mobile-first design
                       </p>
                     </div>
                   </div>
@@ -343,7 +342,7 @@
                     <div class="iphone-x__scroll-chevron iphone-x__scroll-chevron--second js-scroll-chevron"></div>
                     <div class="iphone-x__scroll-chevron iphone-x__scroll-chevron--third js-scroll-chevron"></div>
                     <img src="assets/images/portfolio-website-mobile-screenshot.png" loading="lazy"
-                      alt="Mobile Design of Portfolio Website" title="Scroll down to view entire mobile design">
+                      alt="Mobile Design of Portfolio Website" title="scroll down to view entire mobile design">
                   </div>
                 </div>
               </div>
@@ -378,7 +377,7 @@
                 <h3 class="skill__title">Customer Service</h3>
                 <div class="skill__subtitle">2 Years</div>
                 <p>Through developing various customer-focused solutions, I have gained an aptitude for leveraging
-                  technology to maximize business efficiency and improve customer service. I have experience with
+                  technology to maximize process efficiency and improve customer service. I have experience with
                   designing
                   and implementing end-to-end solutions using Oracle software such as Service Cloud, Customer Portal,
                   Knowledge Advanced, and Integration Cloud.</p>
@@ -449,7 +448,7 @@
                   </a>
                 </li>
                 <li>
-                  <a href="mailto:zhenglai3@gmail.com" target="_blank" rel="noopener" title="Send me an email"
+                  <a href="mailto:zhenglai3@gmail.com" target="_blank" rel="noopener" title="send me an email"
                     aria-label="Send me an email" class="button button--round">
                     <svg class="button__icon">
                       <use xlink:href="assets/icons/symbol-defs.svg#icon-envelope"></use>
